# objtalk

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml  development.yml  release.yml  rust.yml
admin/: index.html
admin/_assets/: events.js  log-page.js  objects-page.js  objtalk.js  utils.js
src/: json_rpc.rs  lib.rs  patterns.rs
src/client/: mod.rs
src/server/: admin.rs  config.rs  http_transport.rs  json_rpc.rs  logger.rs  mod.rs  tcp_transport.rs
src/server/storage/: mod.rs  sqlite.rs
